# hujiscrape

./: .poetryignore  LICENSE  README.md  collectors.py  html_to_object.py  huji_objects.py  hujiscrape.py  magics.py  pyproject.toml  raw_suppliers.py  requirements.txt  scrapers.py
.github/workflows/: deprecated-publish.yml  publish.yml
hujiscrape/: __init__.py  __version__.py  collectors.py  fetch_tasks.py  fetchers.py  html_to_object.py  huji_objects.py  magics.py  scrapers.py
tests/: test_html_to_object.py
