[project]
name = "hujiscrape"
version = "0.0.5"
description = "A scraping tool for HUJI sites."
authors = [
    { name = "Yotam Rosenmann", email = "yotam.pub@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/yotamgod/hujiscrape"
Source = "https://github.com/yotamgod/hujiscrape"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
beautifulsoup4 = "^4.13.3"
aiohttp = "^3.11.14"

[tool.poetry.group.dev.dependencies]
poetry-core = "^2.1.1"
