[project]
name = "hujiscrape"
version = "1.1.1"
description = "A scraping tool for HUJI sites."
authors = [{ name = "Yotam Rosenmann", email = "yotam.pub@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.12.15",
    "beautifulsoup4>=4.13.4,<5",
    "tqdm>=4.67.1,<5",
]

[project.urls]
Homepage = "https://github.com/yotamgod/hujiscrape"
Source = "https://github.com/yotamgod/hujiscrape"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["hujiscrape"]

[dependency-groups]
dev = [
    "hatchling>=1.27.0",
    "pytest>=8.4.1,<9",
    "snakeviz>=2.2.2,<3",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
